ndb - bug#45525   unable to create table with 64 indexes due to insufficient size of schema-op-pool   (since they're now created in a schema trans together with table)